--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GYM24</title>
   </head>
-  <body class="bg-black text-white font-primary overflow-x-hidden">
+  <body class="bg-black text-white font-primary">
     <div id="root"></div>
     <script type="module" src="./src/index.tsx"></script>
   </body>
